--- a/kalaloadingpage/package.json
+++ b/kalaloadingpage/package.json
@@ -7,12 +7,19 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.162",
     "@types/node": "^12.12.67",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.5.2",
+    "browser-sync": "^2.26.12",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.16",
     "typescript": "^3.7.5"
   },
   "scripts": {
