--- a/kalaloadingpage/package.json
+++ b/kalaloadingpage/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.16",
+    "reactstrap": "^8.6.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
