--- a/kalaloadingpage/package.json
+++ b/kalaloadingpage/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.12.67",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "@types/reactstrap": "^8.5.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.5.2",
     "browser-sync": "^2.26.12",
