--- a/kalaloadingpage/package.json
+++ b/kalaloadingpage/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-spinkit": "^3.0.0",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.16",
     "reactstrap": "^8.6.0",
